# hello

./: CMakeLists.txt  c_hello.c  c_hello.h  main.cpp  testing.txt
